LLM4Config/assets/appscode_service-gateway-presets.yaml
---
# Source: service-gateway-presets/templates/gateway/gw.yaml
apiVersion: v1
kind: Service
metadata:
  name: backend
  namespace: default
  labels:
    app: backend
    service: backend
spec:
  ports:
    - name: http
      port: 3000
      targetPort: 3000
  selector:
    app: backend
---
# Source: service-gateway-presets/templates/gateway/gw.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: backend
  namespace: default
spec:
  replicas: 1
  selector:
    matchLabels:
      app: backend
      version: v1
  template:
    metadata:
      labels:
        app: backend
        version: v1
    spec:
      serviceAccountName: backend
      securityContext:
        null
      containers:
        - image: gcr.io/k8s-staging-ingressconformance/echoserver:v20221109-7ee2f3e
          imagePullPolicy: IfNotPresent
          name: backend
          ports:
            - containerPort: 3000
          securityContext:
            null
---
# Source: service-gateway-presets/templates/gateway/gw.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: backend
  namespace: default
spec:
  gatewayClassName: ace
  listeners:
    - name: http
      protocol: HTTP
      port: 80
---
# Source: service-gateway-presets/templates/gateway/gwclass.yaml
apiVersion: gateway.networking.k8s.io/v1beta1
kind: GatewayClass
metadata:
  name: ace
spec:
  controllerName: gateway.voyagermesh.com/service-gateway
  parametersRef:
    group: gateway.envoyproxy.io
    kind: EnvoyProxy
    name: ace-gw-proxy-config
    namespace: default
---
# Source: service-gateway-presets/templates/gateway/gw.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: backend
  namespace: default
spec:
  parentRefs:
    - name: backend
  hostnames:
    - "gw-c1.chart-example.local"
  rules:
    - backendRefs:
        - group: ""
          kind: Service
          name: backend
          port: 3000
          weight: 1
      matches:
        - path:
            type: Exact
            value: /info
